# data_management

./: README.md  pyproject.toml
data_management/: hooks.py
data_management/data_management/doctype/entity_attribute_child/: entity_attribute_child.json  entity_attribute_child.py
data_management/data_management/doctype/parent_metrics_child_table/: parent_metrics_child_table.json  parent_metrics_child_table.py
data_management/data_management/doctype/subsidiary/: subsidiary.js  subsidiary.json  subsidiary.py  test_subsidiary.py
data_management/data_management/doctype/subsidiary_applications/: subsidiary_applications.js  subsidiary_applications.json  subsidiary_applications.py  test_subsidiary_applications.py
data_management/data_management/doctype/subsidiary_entities/: subsidiary_entities.js  subsidiary_entities.json  subsidiary_entities.py  test_subsidiary_entities.py
data_management/data_management/doctype/subsidiary_organization/: subsidiary_organization.js  subsidiary_organization.json  subsidiary_organization.py  test_subsidiary_organization.py
data_management/data_management/doctype/subsidiary_organization_structure_child/: subsidiary_organization_structure_child.json  subsidiary_organization_structure_child.py
data_management/data_management/doctype/subsidiary_system/: subsidiary_system.js  subsidiary_system.json  subsidiary_system.py  test_subsidiary_system.py
data_management/data_management/module_onboarding/data_managment/: data_managment.json
data_management/data_management/onboarding_step/create_technical_systems/: create_technical_systems.json
(+6 files in other folders)
